--- a/themes/sgsc/sass/_front-page.scss
+++ b/themes/sgsc/sass/_front-page.scss
@@ -1,176 +1,185 @@
-  /*--------------------------------------------------------------
+    /*--------------------------------------------------------------
 # Front-Page
 --------------------------------------------------------------*/
-  
-  .home .content-area {
-    display: flex;
-    justify-content: center;
-    .site-main {
+    
+    .home .content-area {
       display: flex;
-      flex-flow: column nowrap;
       justify-content: center;
-      align-items: center;
-      width: $d-width;
-      article {
-        margin: 0;
-      }
-      .learn-about-story {
+      .site-main {
         display: flex;
-        height: 276px;
         flex-flow: column nowrap;
         justify-content: center;
         align-items: center;
-        position: relative;
+        width: $d-width;
+        article {
+          margin: 0;
+        }
+        .learn-about-story {
+          display: flex;
+          height: 276px;
+          flex-flow: column nowrap;
+          justify-content: center;
+          align-items: center;
+          position: relative;
+          width: 100%;
+          @media screen and (min-width: $mobile_width) {
+            height: 386px;
+          }
+          img {
+            height: 276px;
+            width: 100%;
+            @media screen and (min-width: $mobile_width) {
+              height: 386px;
+            }
+          }
+          .front-learn {
+            position: absolute;
+            bottom: 0;
+            height: 138px;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            align-items: center;
+            background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));
+            h1 {
+              margin: 0;
+              padding-bottom: .5rem;
+            }
+            @include m-button;
+          }
+          @include m-donate;
+        }
+        .program-event-post {
+          width: 100%;
+          @media screen and (min-width: $mobile_width) {
+            display: flex;
+            justify-content: space-around;
+          }
+          .front-program,
+          .front-events,
+          .front-blog {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: $orange;
+            height: 138px;
+            width: 100%;
+            @media screen and (min-width: $mobile_width) {
+              height: 386px;
+            }
+            a {
+              text-decoration: none;
+              height: 100%;
+              width: 100%;
+              color: $black;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              @media screen and (min-width: $mobile_width) {
+                justify-content: flex-start;
+                padding-left: 60px;
+              }
+            }
+            &:hover {
+              border: $p_border 4px;
+            }
+          }
+          .front-program {
+            @media screen and (min-width: $mobile_width) {
+              width: 544px;
+              height: 288px;
+              flex-flow: column nowrap;
+              @include m-button;
+            }
+          }
+          .front-events {
+            background: $blue;
+            @media screen and (min-width: $mobile_width) {
+              width: 383px;
+              height: 129px;
+            }
+          }
+          .front-blog {
+            background: $white;
+            @media screen and (min-width: $mobile_width) {
+              width: 383px;
+              height: 129px;
+              background: $blue;
+            }
+          }
+        }
+        .feature-gallery {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          position: relative;
+          height: 276px;
+          background: gray;
+          width: 100%;
+          .front-gallery {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            position: absolute;
+            bottom: 0;
+            height: 138px;
+            width: 100%;
+            background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));
+            h1 {
+              display: flex;
+              justify-content: center;
+              text-align: center;
+            }
+            @include m-button;
+          }
+        }
+        .involved-join {
+          height: 138px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          &:hover {
+            border: $p_border 4px;
+          }
+          .front-involved {
+            display: flex;
+            flex-flow: row wrap;
+            width: 100%;
+            justify-content: space-around;
+            @include m-button;
+            p {
+              border: none !important;
+              background: $pink;
+            }
+          }
+        }
+      }
+      .front-join {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: $blue;
+        height: 138px;
         width: 100%;
         @media screen and (min-width: $mobile_width) {
           height: 386px;
         }
-        img {
-          height: 276px;
+        a {
+          text-decoration: none;
+          height: 100%;
           width: 100%;
-          @media screen and (min-width: $mobile_width) {
-            height: 386px;
-          }
-        }
-        .front-learn {
-          position: absolute;
-          bottom: 0;
-          height: 138px;
-          width: 100%;
+          color: $black;
           display: flex;
           justify-content: center;
           align-items: center;
-          flex-direction: column;
-          align-items: center;
-          background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));
-          h1 {
-            margin: 0;
-            padding-bottom: .5rem;
-          }
-          @include m-button;
         }
-        @include m-donate;
-      }
-      .program-event-post {
-        width: 100%;
-        .front-program,
-        .front-events,
-        .front-blog {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          background: $orange;
-          height: 138px;
-          width: 100%;
-          @media screen and (min-width: $mobile_width) {
-            height: 386px;
-          }
-          a {
-            text-decoration: none;
-            height: 100%;
-            width: 100%;
-            color: $black;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-          }
-          &:hover {
-            border: $p_border 4px;
-          }
-        }
-        .front-events {
-          background: $blue;
-        }
-        .front-blog {
-          background: $white;
-        }
-        @media screen and (min-width: $mobile_width) {
-          .front-program {
-            width: 544px;
-            height: 288px;
-            @include m-button;
-          }
-          .front-events {
-            width: 383px;
-            height: 49px;
-          }
-          .front-blog {
-            width: 383px;
-            height: 49px;
-            background: $blue;
-          }
-        }
-      }
-      .feature-gallery {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-        height: 276px;
-        background: gray;
-        width: 100%;
-        .front-gallery {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          flex-direction: column;
-          position: absolute;
-          bottom: 0;
-          height: 138px;
-          width: 100%;
-          background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));
-          h1 {
-            display: flex;
-            justify-content: center;
-            text-align: center;
-          }
-          @include m-button;
-        }
-      }
-      .involved-join {
-        height: 138px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
         &:hover {
           border: $p_border 4px;
         }
-        .front-involved {
-          display: flex;
-          flex-flow: row wrap;
-          width: 100%;
-          justify-content: space-around;
-          @include m-button;
-          p {
-            border: none !important;
-            background: $pink;
-          }
-        }
       }
     }
-    .front-join {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: $blue;
-      height: 138px;
-      width: 100%;
-      @media screen and (min-width: $mobile_width) {
-        height: 386px;
-      }
-      a {
-        text-decoration: none;
-        height: 100%;
-        width: 100%;
-        color: $black;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      &:hover {
-        border: $p_border 4px;
-      }
-    }
-  }
