--- a/themes/sgsc/sass/_mixins.scss
+++ b/themes/sgsc/sass/_mixins.scss
@@ -13,7 +13,7 @@
   
   //mobile "more" button
   @mixin m-button {
-    a {
+    .m-button {
       text-decoration: none;
       color: $black;
       &:hover {
@@ -43,7 +43,7 @@
       position: absolute;
       bottom: 0;
       right: 0;
-      z-index: 100;
+      z-index: 3;
       a {
         text-decoration: none;
         color: $black;
