--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -824,19 +824,19 @@ object {
         .home .content-area .site-main .learn-about-story .front-learn h1 {
           margin: 0;
           padding-bottom: .5rem; }
-        .home .content-area .site-main .learn-about-story .front-learn a {
+        .home .content-area .site-main .learn-about-story .front-learn .m-button {
           text-decoration: none;
           color: #000000; }
-          .home .content-area .site-main .learn-about-story .front-learn a:hover {
+          .home .content-area .site-main .learn-about-story .front-learn .m-button:hover {
             color: #ffffff; }
-          .home .content-area .site-main .learn-about-story .front-learn a p {
+          .home .content-area .site-main .learn-about-story .front-learn .m-button p {
             padding: 0.3rem 1.5rem;
             border: 2px #000000 solid;
             margin: 0; }
             @media screen and (min-width: 470px) {
-              .home .content-area .site-main .learn-about-story .front-learn a p {
+              .home .content-area .site-main .learn-about-story .front-learn .m-button p {
                 padding: 0.4rem 3rem; } }
-            .home .content-area .site-main .learn-about-story .front-learn a p:hover {
+            .home .content-area .site-main .learn-about-story .front-learn .m-button p:hover {
               border: none;
               background: #f5a623;
               z-index: 2;
@@ -846,7 +846,7 @@ object {
         position: absolute;
         bottom: 0;
         right: 0;
-        z-index: 100; }
+        z-index: 3; }
         .home .content-area .site-main .learn-about-story .donate-btn a {
           text-decoration: none;
           color: #000000; }
@@ -864,6 +864,12 @@ object {
             display: initial; } }
     .home .content-area .site-main .program-event-post {
       width: 100%; }
+      @media screen and (min-width: 470px) {
+        .home .content-area .site-main .program-event-post {
+          display: -ms-flexbox;
+          display: flex;
+          -ms-flex-pack: distribute;
+              justify-content: space-around; } }
       .home .content-area .site-main .program-event-post .front-program,
       .home .content-area .site-main .program-event-post .front-events,
       .home .content-area .site-main .program-event-post .front-blog {
@@ -894,43 +900,54 @@ object {
               justify-content: center;
           -ms-flex-align: center;
               align-items: center; }
+          @media screen and (min-width: 470px) {
+            .home .content-area .site-main .program-event-post .front-program a,
+            .home .content-area .site-main .program-event-post .front-events a,
+            .home .content-area .site-main .program-event-post .front-blog a {
+              -ms-flex-pack: start;
+                  justify-content: flex-start;
+              padding-left: 60px; } }
         .home .content-area .site-main .program-event-post .front-program:hover,
         .home .content-area .site-main .program-event-post .front-events:hover,
         .home .content-area .site-main .program-event-post .front-blog:hover {
           border: 2px #000000 solid 4px; }
-      .home .content-area .site-main .program-event-post .front-events {
-        background: #45cdcb; }
-      .home .content-area .site-main .program-event-post .front-blog {
-        background: #ffffff; }
       @media screen and (min-width: 470px) {
         .home .content-area .site-main .program-event-post .front-program {
           width: 544px;
-          height: 288px; }
-          .home .content-area .site-main .program-event-post .front-program a {
+          height: 288px;
+          -ms-flex-flow: column nowrap;
+              flex-flow: column nowrap; }
+          .home .content-area .site-main .program-event-post .front-program .m-button {
             text-decoration: none;
             color: #000000; }
-            .home .content-area .site-main .program-event-post .front-program a:hover {
+            .home .content-area .site-main .program-event-post .front-program .m-button:hover {
               color: #ffffff; }
-            .home .content-area .site-main .program-event-post .front-program a p {
+            .home .content-area .site-main .program-event-post .front-program .m-button p {
               padding: 0.3rem 1.5rem;
               border: 2px #000000 solid;
               margin: 0; } }
       @media screen and (min-width: 470px) and (min-width: 470px) {
-        .home .content-area .site-main .program-event-post .front-program a p {
+        .home .content-area .site-main .program-event-post .front-program .m-button p {
           padding: 0.4rem 3rem; } }
       @media screen and (min-width: 470px) {
-              .home .content-area .site-main .program-event-post .front-program a p:hover {
+              .home .content-area .site-main .program-event-post .front-program .m-button p:hover {
                 border: none;
                 background: #f5a623;
                 z-index: 2;
-                opacity: 1; }
-        .home .content-area .site-main .program-event-post .front-events {
-          width: 383px;
-          height: 49px; }
-        .home .content-area .site-main .program-event-post .front-blog {
-          width: 383px;
-          height: 49px;
-          background: #45cdcb; } }
+                opacity: 1; } }
+      .home .content-area .site-main .program-event-post .front-events {
+        background: #45cdcb; }
+        @media screen and (min-width: 470px) {
+          .home .content-area .site-main .program-event-post .front-events {
+            width: 383px;
+            height: 129px; } }
+      .home .content-area .site-main .program-event-post .front-blog {
+        background: #ffffff; }
+        @media screen and (min-width: 470px) {
+          .home .content-area .site-main .program-event-post .front-blog {
+            width: 383px;
+            height: 129px;
+            background: #45cdcb; } }
     .home .content-area .site-main .feature-gallery {
       display: -ms-flexbox;
       display: flex;
@@ -962,19 +979,19 @@ object {
           -ms-flex-pack: center;
               justify-content: center;
           text-align: center; }
-        .home .content-area .site-main .feature-gallery .front-gallery a {
+        .home .content-area .site-main .feature-gallery .front-gallery .m-button {
           text-decoration: none;
           color: #000000; }
-          .home .content-area .site-main .feature-gallery .front-gallery a:hover {
+          .home .content-area .site-main .feature-gallery .front-gallery .m-button:hover {
             color: #ffffff; }
-          .home .content-area .site-main .feature-gallery .front-gallery a p {
+          .home .content-area .site-main .feature-gallery .front-gallery .m-button p {
             padding: 0.3rem 1.5rem;
             border: 2px #000000 solid;
             margin: 0; }
             @media screen and (min-width: 470px) {
-              .home .content-area .site-main .feature-gallery .front-gallery a p {
+              .home .content-area .site-main .feature-gallery .front-gallery .m-button p {
                 padding: 0.4rem 3rem; } }
-            .home .content-area .site-main .feature-gallery .front-gallery a p:hover {
+            .home .content-area .site-main .feature-gallery .front-gallery .m-button p:hover {
               border: none;
               background: #f5a623;
               z-index: 2;
@@ -1000,19 +1017,19 @@ object {
         width: 100%;
         -ms-flex-pack: distribute;
             justify-content: space-around; }
-        .home .content-area .site-main .involved-join .front-involved a {
+        .home .content-area .site-main .involved-join .front-involved .m-button {
           text-decoration: none;
           color: #000000; }
-          .home .content-area .site-main .involved-join .front-involved a:hover {
+          .home .content-area .site-main .involved-join .front-involved .m-button:hover {
             color: #ffffff; }
-          .home .content-area .site-main .involved-join .front-involved a p {
+          .home .content-area .site-main .involved-join .front-involved .m-button p {
             padding: 0.3rem 1.5rem;
             border: 2px #000000 solid;
             margin: 0; }
             @media screen and (min-width: 470px) {
-              .home .content-area .site-main .involved-join .front-involved a p {
+              .home .content-area .site-main .involved-join .front-involved .m-button p {
                 padding: 0.4rem 3rem; } }
-            .home .content-area .site-main .involved-join .front-involved a p:hover {
+            .home .content-area .site-main .involved-join .front-involved .m-button p:hover {
               border: none;
               background: #f5a623;
               z-index: 2;
