--- a/themes/sgsc/sass/_mixins.scss
+++ b/themes/sgsc/sass/_mixins.scss
@@ -11,7 +11,9 @@
     margin-right: auto;
   }
   
-  //mobile "more" button
+  // "more" button
+  // Example
+  // <a class="m-button" href="<?php echo esc_url( get_permalink(get_page_by_title( 'about' )) ) ?>"><p>More</p></a>
   @mixin m-button {
     .m-button {
       text-decoration: none;
@@ -36,7 +38,15 @@
     }
   }
   
-  //mobile donate-btn 
+  // Donate-btn 
+  // Example
+  // 	<div class="donate-btn">
+  // 	<a href="<?php echo esc_url( get_permalink(get_page_by_title( 'donate' )) ) ?>">
+  // 		<i class="fa fa-heart-o" aria-hidden="true">
+  // 			<p>Donate</p>
+  // 		</i>
+  // 		</a>
+  // </div>
   @mixin m-donate {
     .donate-btn {
       background-color: $pink;
