remove front-page php class

--- a/themes/sgsc/sass/_front-page.scss
+++ b/themes/sgsc/sass/_front-page.scss
@@ -92,6 +92,10 @@
               height: 288px;
               flex-flow: column nowrap;
               @include m-button;
+              .detail-program {
+                display: flex;
+                flex-flow: column wrap;
+              }
             }
           }
           .front-events {
