add scss front-page m-button class for .front-program

--- a/themes/sgsc/sass/_front-page.scss
+++ b/themes/sgsc/sass/_front-page.scss
@@ -87,14 +87,16 @@
             }
           }
           .front-program {
+            @include m-button;
+            p {
+              display: none;
+            }
             @media screen and (min-width: $mobile_width) {
               width: 544px;
               height: 288px;
               flex-flow: column nowrap;
-              @include m-button;
-              .detail-program {
+              p {
                 display: flex;
-                flex-flow: column wrap;
               }
             }
           }
