add scss front-page m-button to show on gallery and .front-learn

--- a/themes/sgsc/sass/_front-page.scss
+++ b/themes/sgsc/sass/_front-page.scss
@@ -48,6 +48,9 @@
               padding-bottom: .5rem;
             }
             @include m-button;
+            .m-button {
+              display: flex;
+            }
           }
           @include m-donate;
         }
@@ -140,6 +143,9 @@
               text-align: center;
             }
             @include m-button;
+            .m-button {
+              display: flex;
+            }
           }
         }
         .involved-join {
