add back button to mobile menu

--- a/themes/sgsc/sass/_navigation.scss
+++ b/themes/sgsc/sass/_navigation.scss
@@ -203,3 +203,12 @@ a {
 //   visibility: visible;
 //   height: 100%;
 // }
+
+#back-button {
+	display: none;
+	margin-left: 2rem;
+	background: none;
+	border: 2px solid black;
+	box-shadow: none;
+	border-radius: 0;
+}
