--- a/themes/sgsc/sass/_mixins.scss
+++ b/themes/sgsc/sass/_mixins.scss
@@ -21,19 +21,31 @@
       display: none;
       @media screen and (min-width: $mobile_width) {
         display: flex;
+        &:hover {
+          color: $white;
+        }
       }
-      &:hover {
+      &:active {
         color: $white;
       }
       p {
         padding: $m_padding;
         border: $p_border;
         margin: 0;
-        &:hover {
+        &:active {
           border: none;
           background: $orange;
           z-index: 2;
           opacity: 1;
+        }
+        @media screen and (min-width: $mobile_width) {
+          display: flex;
+          &:hover {
+            border: none;
+            background: $orange;
+            z-index: 2;
+            opacity: 1;
+          }
         }
       }
     }
