--- a/themes/sgsc/sass/_mixins.scss
+++ b/themes/sgsc/sass/_mixins.scss
@@ -19,20 +19,17 @@
       text-decoration: none;
       color: $black;
       display: none;
+      @include hover-state {
+        color: $white;
+      }
       @media screen and (min-width: $mobile_width) {
         display: flex;
-        &:hover {
-          color: $white;
-        }
-      }
-      &:active {
-        color: $white;
       }
       p {
         padding: $m_padding;
         border: $p_border;
         margin: 0;
-        &:active {
+        @include hover-state() {
           border: none;
           background: $orange;
           z-index: 2;
@@ -40,12 +37,6 @@
         }
         @media screen and (min-width: $mobile_width) {
           display: flex;
-          &:hover {
-            border: none;
-            background: $orange;
-            z-index: 2;
-            opacity: 1;
-          }
         }
       }
     }
