created footer widgit

--- a/themes/sgsc/sass/_footer.scss
+++ b/themes/sgsc/sass/_footer.scss
@@ -4,7 +4,7 @@ footer {
 }
 
 .site-info {
-    padding: 0 5%;
+    // padding: 0 5%;
     margin: auto;
     display: flex;
     flex-direction: row;
@@ -34,8 +34,8 @@ footer {
     background-image: url("../../assets/images/facebook-circle-sm.svg");
     background-repeat: no-repeat; 
     margin-right: 10px;
-    height: 25px;
-    width: 25px
+    height: 36px;
+    width: 36px
 }
 
 .twitter {
@@ -43,8 +43,8 @@ footer {
     background-repeat: no-repeat; 
     margin-left: 10px;
     margin-right: 10px;
-    height: 25px;
-    width: 25px
+    height: 36px;
+    width: 36px
 }
 
 .copywrite {
